feat: Add participants feature and update server configuration - Introduced AddParticipantsDTO for validating participant addition requests, and added new endpoint to chatRoute for adding participants to a chat room - Updated Swagger documentation to include the new endpoint - Changed server URL in swagger configuration to the new AWS instance - Removed unused Discord notification functionality and related code - Removed IP whitelist - Cleaned up .env.sample by removing unnecessary variables
