# src/routes/chatRoute.js
@@ -6,12 +6,14 @@ const {
   getGroupRoomListController,
   createChallengeRoomController,
   deleteRoomController,
+  addParticipantsController,
 } = require('../controllers/chatController');
 
 const router = express.Router();
 
 router.get('/list/group', getGroupRoomListController);
 router.get('/list/challenge', getChallengeRoomListController);
+router.post('/add', addParticipantsController);
 router.get('/message/:roomId', getChatMessagesController);
 router.post('/create', createChatRoomController);
 router.post('/create/challenge/:challengeId', createChallengeRoomController);
